turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:40: error: Unmatched closing brace '}' ignored here
}
^